# limitr

./: Cargo.toml  README.md
.github/workflows/: check_and_lint.yml  publish_crate.yml  test.yml
examples/: fixed_window_example.rs  leaky_example.rs  sliding_window_example.rs  token_example.rs
src/: lib.rs
src/bucket/: leaky.rs  mod.rs  token.rs
src/window/: fixed_window.rs  mod.rs  sliding_window.rs
