[package]
name = "limitr"
version = "0.2.0"
edition = "2021"
description = "A crate offering various rate-limiting algorithms such as Token Bucket, Leaky Bucket, and more."
authors = ["Arteii <ben.arteii@proton.me>"]
repository = "https://github.com/arteiii/limitr"
license = "MIT"
readme = "README.md"
categories = ["algorithms", "network-programming", "asynchronous"]
keywords = ["rate-limit", "throttling", "token-bucket", "leaky-bucket", "api-protection"]

include = [
    "src/**/*",
    "README.md",
    "LICENSE",
    "examples/**/*"
]


[dependencies]
tokio = { version = "1.40.0", features = ["time", "rt", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.9.0-alpha.2"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"


[lib]
name = "limitr"
path = "src/lib.rs"

[features]
default = ["bucket"]
full = ["bucket", "window"]
bucket = []
window = []


[package.metadata.docs.rs]
all-features = true